--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "php-di/php-di": "^7.0",
     "slim/csrf": "^1.3",
     "symfony/console": "^6.4",
-    "tecnickcom/tcpdf": "^6.10"
+    "tecnickcom/tcpdf": "^6.10",
+    "dompdf/dompdf": "^3.1"
   },
   "autoload": {
     "psr-4": {
