--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     "slim/csrf": "^1.3",
     "symfony/console": "^6.4",
     "tecnickcom/tcpdf": "^6.10",
-    "dompdf/dompdf": "^3.1",
-    "mpdf/mpdf": "^8.2"
+    "dompdf/dompdf": "^3.1"
   },
   "autoload": {
     "psr-4": {
