--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,7 @@
     "slim/slim": "^4.13",
     "slim/psr7": "^1.6",
     "php-di/php-di": "^7.0",
-    "slim/csrf": "^1.3",
-    "symfony/console": "^6.4",
-    "tecnickcom/tcpdf": "^6.10",
-    "dompdf/dompdf": "^3.1"
+    "slim/csrf": "^1.3"
   },
   "autoload": {
     "psr-4": {
