Melhorar SessionMiddleware: suportar session_save_path customizado para HostGator

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ DB_NAME=clima
 DB_USER=root
 DB_PASS=
 DB_CHARSET=utf8mb4
+# ====== SESSÃO (Opcional - para HostGator) ======
+# Se tiver erros de sessão, configure o caminho aqui
+# SESSION_PATH=/home3/SEU_USUARIO/tmp
