Configurar session.save_path para /home3/terr6836/clima_tmp (usuário terr6836)

--- a/public/php.ini
+++ b/public/php.ini
@@ -2,7 +2,7 @@
 ; Copiado para public_html/ no HostGator
 
 ; ====== SESSÃO ======
-session.save_path = "/home3/SEU_USUARIO/tmp"
+session.save_path = "/home3/terr6836/clima_tmp"
 session.save_handler = "files"
 session.auto_start = 0
 session.use_strict_mode = 1
@@ -22,7 +22,7 @@ post_max_size = 100M
 ; ====== ERRO ======
 display_errors = 0
 log_errors = 1
-error_log = "/home3/SEU_USUARIO/public_html/var/log/php_errors.log"
+error_log = "/home3/terr6836/public_html/var/log/php_errors.log"
 
 ; ====== TIMEZONE ======
 date.timezone = "America/Sao_Paulo"
