feat: Sanitização completa de credenciais e dados sensíveis
- Removidas todas as credenciais (DB, Thinger.io, tokens)
- Removidos IDs de hosting (terr6836)
- Removidos nomes, emails e dados pessoais
- Removidas URLs GitHub pessoais
- Pasta backup/ ignorada e removida do Git
- Arquivos ZIP ignorados
- Substituídos por placeholders e instruções claras
- Adicionado SANITIZACAO_CREDENCIAIS.md com documentação completa

Arquivos modificados: 21
Repositório seguro para compartilhamento público

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,22 @@
-# Exemplo de configuração de banco
-DB_HOST=localhost
-DB_NAME=clima
-DB_USER=root
-DB_PASS=
+# ====== BANCO DE DADOS ======
+# Configure suas credenciais do banco de dados
+DB_HOST=seu_host_mysql  # Ex: localhost, 127.0.0.1 ou host remoto
+DB_NAME=seu_nome_banco  # Ex: clima_ete
+DB_USER=seu_usuario_db  # Usuário do MySQL/MariaDB
+DB_PASS=sua_senha_db    # Senha do usuário do banco
 DB_CHARSET=utf8mb4
-# ====== SESSÃO (Opcional - para HostGator) ======
-# Se tiver erros de sessão, configure o caminho aqui
-# SESSION_PATH=/home3/SEU_USUARIO/tmp
+
+# ====== THINGER.IO (Integração IoT) ======
+# Configure suas credenciais do Thinger.io
+THINGER_USER=seu_usuario_thinger      # Usuário Thinger.io
+THINGER_DEVICE=seu_id_dispositivo     # ID do dispositivo (ex: nodemcu, esp32)
+THINGER_RESOURCE=seu_recurso_path     # Path do recurso (ex: weather, data)
+THINGER_TOKEN=seu_token_thinger       # Token de acesso Bearer
+
+# ====== CRON (Sincronização Automática - Opcional) ======
+# Chave segura para proteger endpoint de sincronização
+CLIMA_CRON_KEY=sua_chave_cron_segura  # Mínimo 32 caracteres
+
+# ====== SESSÃO (Opcional - para Hosting Remoto) ======
+# Se tiver erros de sessão em HostGator ou similar, descomente e configure:
+# SESSION_PATH=/home/seu_usuario/tmp   # Caminho temporário do servidor
