--- a/public/php.ini
+++ b/public/php.ini
@@ -1,8 +1,12 @@
 ; php.ini - Configuração PHP do Projeto
-; Copiado para public_html/ no HostGator
+; Copiado para public_html/ no HostGator ou servidor remoto
 
 ; ====== SESSÃO ======
-session.save_path = "/home3/terr6836/clima_tmp"
+; Configure o caminho correto para seu servidor:
+; - Local (Linux): /tmp ou /var/tmp
+; - HostGator: /home/seu_username/tmp
+; - Outro hosting: consulte documentação do provedor
+session.save_path = "/tmp"
 session.save_handler = "files"
 session.auto_start = 0
 session.use_strict_mode = 1
@@ -22,7 +26,10 @@ post_max_size = 100M
 ; ====== ERRO ======
 display_errors = 0
 log_errors = 1
-error_log = "/home3/terr6836/public_html/var/log/php_errors.log"
+; Configure o caminho para logs (deve ser escrevível):
+; - Local: var/log/php_errors.log
+; - HostGator: /home/seu_username/public_html/var/log/php_errors.log
+error_log = "var/log/php_errors.log"
 
 ; ====== TIMEZONE ======
 date.timezone = "America/Sao_Paulo"
